2021-05-18  Jacob Bachmeyer  <jcb@gnu.org>

	* testsuite/runtest.main/pr48155.exp: Fix assumption about exit
	code from /bin/false, which is different on Solaris.

2021-05-05  Jacob Bachmeyer  <jcb@gnu.org>

	PR48155

	* Makefile.am (TESTSUITE_FILES): Update.
	(CLEANFILES): Add special init file for PR48155 nested tests.

	* testsuite/runtest.main/pr48155.exp: New file.
	* testsuite/runtest.main/pr48155-csh.sh: New trivial file.  This
	script emulates the behavior of the C shell if an attempt is made
	to use it to run the config.guess script.

2021-05-04  Jacob Bachmeyer  <jcb@gnu.org>

	PR48155

	* runtest.exp: Tighten regexp used to validate output from
	config.guess.  The previous regexp would accept an error produced
	if config.guess was incorrectly run using the C shell.

2021-04-28  Jacob Bachmeyer  <jcb@gnu.org>

	* configure, Makefile.in: Regenerate.

	* runtest.exp, configure.ac, doc/version.texi: Update version.

	* Makefile.am (TAR_OPTIONS): Explicitly select v7 tarball format
	to work around Automake limitation of assuming that v7 is default.

2021-04-20  Jacob Bachmeyer  <jcb@gnu.org>

	* configure.ac: Set Automake options to use the ancient and
	universal V7 format when building distribution tarballs.  The
	limitations of this format are not expected to impact DejaGnu; the
	"ustar" format will be used instead if this is proved wrong.

	* Makefile.am (TAR_OPTIONS): Add exported environment variable to
	set options when building distribution tarballs.  Ensure that all
	files in distribution tarballs will be recorded as owned by root.

2021-04-16  Jacob Bachmeyer  <jcb@gnu.org>

	PR47382

	* dejagnu (command): Use Awk instead of non-portable basename(1)
	and a non-portable sed(1) pattern to initially set this variable.

	* dejagnu: Use shell "case" pattern match instead of non-portable
	"grep -q" to determine if "awk" is GNU Awk.

	* dejagnu: Use Awk instead of non-portable "grep -q" to verify